envoy/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
  labels:
    app: envoy
spec:
  type: ClusterIP
  ports:
    - name: admin
      port: 9901
      targetPort: 9901
    - name: to-fastapi
      port: 10001
      targetPort: 10001
  selector:
    app: envoy
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
data:
  envoy.yaml: |
    admin:
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 9901

    static_resources:
      listeners:
      - name: listener_1
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 10001
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              scheme_header_transformation:
                scheme_to_overwrite: https
              stat_prefix: health_check
              access_log:
              - name: envoy.access_loggers.stdout
                typed_config:
                  "@type": "type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog"
                  log_format:
                    text_format: |
                      ===
                      timestamp      : %START_TIME%
                      request        : %REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL% %RESPONSE_CODE%
                      duration       : %DURATION%
                      upstream       : %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%
                      x-forwarded-for: %REQ(X-FORWARDED-FOR)%
                      authority      : %REQ(:AUTHORITY)%
                      upstream host  : %UPSTREAM_HOST%
                      ===
              route_config:
                name: static_route
                virtual_hosts:
                - name: static_route_hosts
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      host_rewrite_literal: fastapi.default.svc.cluster.local:8080
                      cluster: fastapi
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

      clusters:
      - name: fastapi
        connect_timeout: 30s
        type: LOGICAL_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: fastapi
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: fastapi.default.svc.cluster.local
                    port_value: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
  labels:
    app: envoy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
        - name: envoy
          image: envoyproxy/envoy:v1.25.3
          env:
            - name: TZ
              value: 'Asia/Tokyo'
          ports:
            - containerPort: 9901
            - containerPort: 10001
          volumeMounts:
            - name: envoy-config-volume
              mountPath: "/etc/envoy/"
              readOnly: true
      volumes:
        - name: envoy-config-volume
          configMap:
            name: envoy-config
            items:
              - key: "envoy.yaml"
                path: "envoy.yaml"
---
